--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>seat</title>
+    <title>seatSelected</title>
     <script type="text/javascript">
       // 关闭选择
       // document.addEventListener('selectstart', (e) => { e.preventDefault() });
